fix: case & class readability

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,11 @@
-.authing {
+.auth-img {
   /* max-width: 50%; */
   max-width: 450px;
   max-height: 480px;
 }
 
 @media screen and (max-width: 1024px) {
-  .authing {
+  .auth-img {
     display: none;
   }
 }
